Fixed lines between What I Do items on mobile. Changed projects links to have whole card grow on hover

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,15 @@ h3 {
     }
 }
 
+@media (max-width: 500px) {
+    .back-to-top {
+        padding: 0 1.45%;
+        bottom: 20px;
+        right: 30px;
+        font-size: 1.25rem;
+    }
+}
+
 /*  Intro Section  */
 
 .intro {
@@ -520,9 +529,9 @@ h3 {
 .section__title--services::after {
     content: '';
     display: block;
-    width: 2em;
+    width: 3em;
     height: 1px;
-    margin: 0.5em auto 1em;
+    margin: 0.5em auto 1em auto;
     background: var(--clr-light);
     opacity: 0.25;
 }
@@ -599,7 +608,7 @@ h3 {
     .service p::after {
         content: '';
         display: block;
-        width: 20em;
+        width: 90%;
         height: 1px;
         margin: 2em auto;
         background: var(--clr-light);
@@ -741,6 +750,10 @@ h3 {
     display: flex;
     flex-direction: column;
     width: 20%;
+    transition: 
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
+
 }
 
 .portfolio-item__name {
@@ -760,9 +773,6 @@ h3 {
 }
 
 .portfolio__img {
-    transition: 
-        transform 750ms cubic-bezier(.5, 0, .5, 1),
-        opacity 250ms linear;
         width: 100%;
         height: auto;
         flex-grow: 0;
@@ -773,7 +783,7 @@ h3 {
     z-index: 2;
 }
 
-.portfolio__img:hover,
+.portfolio__item:hover,
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);
     opacity: .55;
